--- a/comtech_hr/comtech_hr/doctype/comtech_hr_settings/comtech_hr_settings.json
+++ b/comtech_hr/comtech_hr/doctype/comtech_hr_settings/comtech_hr_settings.json
@@ -7,30 +7,30 @@
  "editable_grid": 1,
  "engine": "InnoDB",
  "field_order": [
-  "per_month_days",
+  "no_of_days_in_a_month",
   "column_break_kqxv2",
-  "per_year_days"
+  "no_of_days_in_a_year"
  ],
  "fields": [
   {
-   "fieldname": "per_month_days",
-   "fieldtype": "Int",
-   "label": "Per Month Days"
-  },
-  {
-   "fieldname": "per_year_days",
-   "fieldtype": "Int",
-   "label": "Per Year Days"
-  },
-  {
    "fieldname": "column_break_kqxv2",
    "fieldtype": "Column Break"
+  },
+  {
+   "fieldname": "no_of_days_in_a_month",
+   "fieldtype": "Int",
+   "label": "No Of Days In A Month"
+  },
+  {
+   "fieldname": "no_of_days_in_a_year",
+   "fieldtype": "Int",
+   "label": "No Of Days In A Year"
   }
  ],
  "index_web_pages_for_search": 1,
  "issingle": 1,
  "links": [],
- "modified": "2025-07-09 11:49:49.290534",
+ "modified": "2025-07-11 12:34:05.890489",
  "modified_by": "Administrator",
  "module": "ComTech HR",
  "name": "Comtech HR Settings",
